test/functions/default-arguments/default-argument-type-value-variable.good
default-argument-type-value-variable.chpl:6: error: unable to initialize a type formal with a value
